--- a/roles/install/tasks/main.yml
+++ b/roles/install/tasks/main.yml
@@ -1,1 +1,13 @@
 
+---
+- hosts: all
+  gather_facts: false
+  tasks:
+  - name: "Install Microsoft .NET Framework 4.5.2."
+    win_package:
+     path: "https://download.microsoft.com/download/E/2/1/E21644B5-2DF2-47C2-91BD-63C560427900/NDP452-KB2901907-x86-x64-AllOS-ENU.exe"
+     product_id: "{26784146-6E05-3FF9-9335-786C7C0FB5BE}"
+    register: dotnet452_exe
+  - debug:
+     var: dotnet452_exe
+     verbosity: 1
