--- a/win_ping.yml
+++ b/win_ping.yml
@@ -7,3 +7,5 @@
     - name: Induce an exception to see what happens
       win_ping:
         data: crash
+    - name: Get whoami information
+      win_whoami:
